<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:title = "@string/app_name">
        
        
        <CheckBoxPreference
            android:key="@string/pref_usage_data_key"
            android:summary="@string/usage_data_description" 
            android:title="@string/usage_data_title"/>
        
        <Preference
            android:key="@string/pref_intro_played_key"/>
          
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title = "@string/tasks">
        
         <EditTextPreference
             android:key="@string/pref_task_title_key"
             android:summary="@string/default_title_description" 
             android:title="@string/default_title"/>
          
          <EditTextPreference
             android:key="@string/pref_default_time_from_now_key"
             android:summary="@string/minutes_from_now_description" 
             android:title="@string/minutes_from_now"/>
             
          
    </PreferenceCategory>
</PreferenceScreen>
