<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	        
	    <TextView 
	        android:id="@+id/centerDiv"
			android:layout_centerInParent = "true"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"/>
	    
	    <ImageView
	        android:contentDescription="@string/mind_your_mind_icon"
	        android:layout_width="250dp"
	        android:layout_height="250dp"
			android:layout_alignParentTop="true"
			android:paddingTop="@dimen/login_signup_spacing"
			android:layout_centerHorizontal="true"
	        android:src="@drawable/mym_logo"/>
	    
	     <TextView 
	        android:id="@+id/email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
	        android:layout_below="@id/centerDiv"
	        android:layout_marginTop="@dimen/login_signup_spacing"
	        android:text="@string/email_place_holder"/>
	     
	    <EditText 
	        android:id="@+id/ETPasscode"
	        android:hint="@string/passcode"
	        android:layout_height="wrap_content"
	        android:layout_width="100dp"
	        android:layout_below="@id/email"
	        android:gravity="center_horizontal"
	        android:background="@drawable/shape_boarder"
	        android:layout_marginTop="@dimen/login_signup_spacing"
	        android:layout_centerHorizontal="true"
	        android:maxLength="4"
	        android:inputType="numberPassword"/>
	    
	    <Button
	        android:id="@+id/button_login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/ETPasscode"
	        android:layout_marginTop="@dimen/login_signup_spacing"
	        android:layout_centerHorizontal="true"
	        android:text="@string/login"/>
	    
	    <TextView 
	        android:id="@+id/TV_notMe"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_alignParentBottom="true"
	        android:layout_margin="@dimen/login_signup_spacing"
	        android:textColor="@color/accent_material_light"
	        android:text="@string/not_me_q"/>
    

</RelativeLayout>