<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guidance_center_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	    
	    <ImageView
	        android:contentDescription="@string/motivational_images"
	        android:id="@+id/calmingImages"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:text="@string/hello_world" 
	        android:layout_gravity="center"
	        android:layout_weight="1"/>
	        <!--android:background="@drawable/shape_boarder"-->
	    
	    <TextView 
	        android:id="@+id/message"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center"
	        android:padding="@dimen/gutter"
	        android:gravity="center"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        android:layout_weight="1"
	        android:text="@string/add_text_here"/>
	    
	</LinearLayout>