<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/SignUpAuthenticate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/editUniversityEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gutter"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/university_email_address"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextYearOfStudy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gutter"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/yearofstudy"
                android:inputType="number" >
            </EditText>

            <EditText
                android:id="@+id/spinnerUniversity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gutter"
                android:cursorVisible="true"
                android:focusable="false"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/university"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/spinnerDegreePathway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gutter"
                android:ems="10"
                android:focusable="false"
                android:gravity="start"
                android:hint="@string/degreepathway"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>